--- a/src/app/features/components/dashboard/general-overview/general-overview.component.html
+++ b/src/app/features/components/dashboard/general-overview/general-overview.component.html
@@ -9,7 +9,7 @@
   <div class="overview-content" role="main">
     <div class="layout-grid">
       <mat-accordion multi cdkDropList (cdkDropListDropped)="drop($event)">
-        @for (panel of dashboardPanels(); track trackByPanelId($index, panel)) {
+        @for (panel of dashboardPanels(); track panel.id) {
           @if (panel.visible || isEditingLayout()) {
             <div
               cdkDrag
@@ -174,7 +174,7 @@
                                     value: (bandwidthLimit()?.bytesPerSecond | formatRateValue),
                                   },
                                 ];
-                                track trackByIndex($index, detail)
+                                track $index
                               ) {
                                 <div class="detail-item">
                                   <span class="label">{{ detail.label }}</span>
@@ -249,7 +249,7 @@
                                 value: (systemStats().uptime | formatTime),
                               },
                             ];
-                            track trackByIndex($index, item)
+                            track $index
                           ) {
                             <div class="info-item" role="row">
                               <span class="label" role="gridcell">{{ item.label }}</span>
@@ -371,7 +371,7 @@
                                   value: jobStats().serverSideMoves,
                                 },
                               ];
-                              track trackByIndex($index, item)
+                              track $index
                             ) {
                               <div class="info-item" role="row">
                                 <span class="label" role="gridcell">{{ item.label }}</span>
