--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -46,7 +46,7 @@
               matTooltipPosition="above"
             >
               <img src="assets/rclone.svg" alt="Rclone Logo" class="no-remotes-icon" />
-              <span class="status-dot" [class]="backendStatusClass"></span>
+              <span class="status-dot" [class]="backendStatusClass()"></span>
             </button>
             <span class="backend-name">{{ activeBackend() }}</span>
 
